tab toggle functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap" rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css"/>
+    <script src="js/script.js" defer></script>
     <title>Bookmark Website</title>
 </head>
 <body class="overflow-x-hidden">
@@ -142,7 +143,7 @@
                 </div>
             </div>
             <!--       Panel 2     -->
-            <div class="flex flex-col py-5 md:flex-row md:space-x-7 panel panel-1 hidden">
+            <div class="flex flex-col py-5 md:flex-row md:space-x-7 panel panel-2 hidden">
                 <!--          Panel Image      -->
                 <div class="flex justify-center md:w-1/2">
                     <img src="images/illustration-features-tab-2.svg" alt="" class="relative z-10">
@@ -165,7 +166,7 @@
                 </div>
             </div>
             <!--       Panel 3     -->
-            <div class="flex flex-col py-5 md:flex-row md:space-x-7 panel panel-1 hidden">
+            <div class="flex flex-col py-5 md:flex-row md:space-x-7 panel panel-3 hidden">
                 <!--          Panel Image      -->
                 <div class="flex justify-center md:w-1/2">
                     <img src="images/illustration-features-tab-3.svg" alt="" class="relative z-10">
