--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
                 login
             </a>
         </div>
+<!--    Hamburger Button    -->
+        <button id="menu-btn" class="z-30 block md:hidden focus:outline-nine hamburger">
+            <span class="hamburger-top"></span>
+            <span class="hamburger-middle"></span>
+            <span class="hamburger-bottom"></span>
+        </button>
+    </div>
+<!--     Mobile Menu   -->
+    <div id="menu" class="hidden fixed inset-0 z-20 flex-col items-center self-end w-full h-full min-h-screen px-6 py-1 pt-24 pb-4 tracking-widest text-white uppercase divide-y divide-gray-500 opacity-90 bg-veryDarkBlue">
+        <div class="w-full py-3 text-center hover:text-softRed">
+            <a href="#features">Features</a>
+        </div>
+        <div class="w-full py-3 text-center hover:text-softRed">
+            <a href="#download">Download</a>
+        </div>
+        <div class="w-full py-3 text-center hover:text-softRed">
+            <a href="#faq">FAQ</a>
+        </div>
+        <div class="w-full py-3 text-center hover:text-softRed">
+            <a href="#">login</a>
+        </div>
     </div>
 </nav>
 
